# rustyplayer

./: Cargo.toml  README.md
docs/: choices.md  mvp_scope.md
src/: cli.rs  db.rs  lib.rs  main.rs  player.rs
