[package]
name = "rustyplayer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
# symphonia latest stable series is 0.5.x on crates.io
symphonia = "0.5"
rodio = { version = "0.17", optional = true }
rusqlite = { version = "0.29", features = ["bundled"] }
walkdir = "2.3"
directories = "4.0"
thiserror = "1.0"

[features]
default = []
audio = ["rodio"]
